<?xml version="1.0"?>
<package format="3">
  <name>kml_generator</name>
  <version>0.1.0</version>
  <description>
    KML generator package
  </description>
  <maintainer email="contact@map4.jp">MAP IV</maintainer>
  <author>Map IV</author>
  <license>Private</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
